--- a/index.html
+++ b/index.html
@@ -363,10 +363,10 @@
   })();
 
   // ========================== CONFIGURAÇÃO ===============================
-  const API_URL = 'https://script.google.com/macros/s/SEU_WEBAPP_AQUI/exec'; // <- Apps Script WebApp
-  const PIX_CHAVE = 'SEU_PIX_AQUI'; // chave aleatória/CNPJ/CPF/telefone/email
+  const API_URL = 'https://script.google.com/macros/s/AKfycbzxZ8J2hUVf-m_W7emALKKyI0PsiXqcWqKFxKive-If1VcEVvkmdXwMnRe827KAvVc1/exec'; // <- Apps Script WebApp
+  const PIX_CHAVE = '08338807567'; // chave aleatória/CNPJ/CPF/telefone/email
   const PIX_RECEPTOR = 'CLENA FOODS';
-  const PIX_CIDADE = 'SALVADOR';
+  const PIX_CIDADE = 'BARREIRAS-BA';
 
   // ===== COORDENADAS DA LOJA (fixas) =====
   // Rua Pernambuco, 629 — Vila Brasil, Barreiras-BA, CEP 47801-370
