--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@
 
   // ========================== CONFIGURAÇÃO ===============================
   // COLE AQUI a URL /exec do seu WebApp (Implantar > Aplicativo da Web)
-  const API_URL = 'PASTE_YOUR_WEBAPP_EXEC_URL_HERE';
+  const API_URL = 'https://script.google.com/macros/s/AKfycbxmmjR123V6u39J-J1qDMTMhjqCKoPVnX5EaQQqqxcLQHNVmwhqikguzYh7KVKhBhcW/exec';
   const PIX_CHAVE = '08338807567'; // sua chave PIX (telefone/aleatória/email/cpf/cnpj)
   const PIX_RECEPTOR = 'CLENA FOODS';
   const PIX_CIDADE = 'BARREIRAS-BA';
