--- a/index.html
+++ b/index.html
@@ -57,7 +57,6 @@
     .brand img{width:34px;height:34px;border-radius:10px;box-shadow:var(--shadow)}
     .brand .t1{font-weight:800;letter-spacing:.2px;font-size:15px}
     .brand .t2{font-size:11px;color:var(--muted)}
-
     .actions{margin-left:auto; display:flex; align-items:center; gap:10px}
     .iconbtn{
       position:relative; display:grid; place-items:center;
@@ -183,7 +182,7 @@
       <div class="wrap">
         <div class="brand" onclick="showPage('menu')">
           <img src="https://images.unsplash.com/photo-1544027993-37dbfe43562a?q=80&w=120&auto=format&fit=crop" alt="logo"/>
-        <div>
+          <div>
             <div class="t1">CLENA FOODS</div>
             <div class="t2">Hamburgueria • Delivery & Retirada</div>
           </div>
@@ -437,46 +436,53 @@
   const PIX_CIDADE = 'BARREIRAS-BA';
   const STORE_LAT = -12.139814, STORE_LNG = -44.9893035; // Rua Pernambuco, 629 — Vila Brasil
 
-// ====== CONFIG DE TAXAS E HORÁRIOS ======
-let BAIRROS_TAXAS = {};
-let HORARIOS = {};
+  // ====== HORÁRIOS LOCAIS (sem planilha) ======
+  // Edite livremente os horários abaixo:
+  const LOCAL_HORARIOS = {
+    dom: { abre: '17:00', fecha: '23:59', ativo: true },
+    seg: { abre: '11:00', fecha: '23:59', ativo: true },
+    ter: { abre: '11:00', fecha: '23:59', ativo: true },
+    qua: { abre: '11:00', fecha: '23:59', ativo: true },
+    qui: { abre: '11:00', fecha: '23:59', ativo: true },
+    sex: { abre: '11:00', fecha: '23:59', ativo: true },
+    sab: { abre: '11:00', fecha: '23:59', ativo: true },
+  };
+  function getOpenStatusLocal() {
+    const dayNames = ['dom','seg','ter','qua','qui','sex','sab'];
+    const now = new Date();
+    const dow = dayNames[now.getDay()];
+    const h = LOCAL_HORARIOS[dow];
+    if (!h) return { open: true, message: '(sem config)' };
+    if (!h.ativo) return { open: false, message: 'Fechado hoje' };
 
-async function bootFeesHours(){
-  try {
-    const fees = await api('getFees');
-    if(fees.ok){
-      BAIRROS_TAXAS = Object.fromEntries(fees.items.map(f => [f.bairro, Number(f.taxa||0)]));
-      const dl = document.getElementById('bairrosList');
-      if(dl) dl.innerHTML = Object.keys(BAIRROS_TAXAS).map(b => `<option value="${b}">`).join('');
-    }
-    const open = await api('getOpenStatus');
-    const badge = $('#openBadge');
-    if(open && open.ok){
-      badge.innerHTML = open.open ? `🟢 Aberto • ${open.message}` : `🔴 Fechado • ${open.message}`;
-      badge.style.color = open.open ? 'var(--ok)' : 'var(--bad)';
-    } else {
-      badge.innerHTML = '⚠️ Horário indisponível';
-      badge.style.color = 'var(--warn)';
-    }
-  } catch(e){
-    console.error('bootFeesHours', e);
-    const badge = $('#openBadge');
-    badge.innerHTML = '⚠️ Erro ao carregar horário';
-    badge.style.color = 'var(--warn)';
+    let [ha, ma] = String(h.abre || '00:00').split(':').map(Number);
+    let [hf, mf] = String(h.fecha || '23:59').split(':').map(Number);
+    if (hf === 0 && mf === 0) { hf = 23; mf = 59; }
+
+    const start = new Date(now); start.setHours(ha, ma, 0, 0);
+    const end   = new Date(now); end.setHours(hf, mf, 0, 0);
+    if (end <= start) end.setDate(end.getDate() + 1);
+
+    const open = (now >= start && now <= end);
+    const msg  = open
+      ? `Fechamos às ${String(h.fecha || '23:59').padStart(5,'0')}`
+      : `Abrimos às ${String(h.abre  || '00:00').padStart(5,'0')}`;
+
+    return { open, message: msg };
   }
-}
 
+  // ====== CONFIG DE TAXAS (carrega do backend) ======
+  let BAIRROS_TAXAS = {};
 
-
-  const $ = sel => document.querySelector(sel);
+  const $  = sel => document.querySelector(sel);
   const $$ = sel => Array.from(document.querySelectorAll(sel));
   const BRL = v => v.toLocaleString('pt-BR',{style:'currency',currency:'BRL'});
-  const digitsOnly = s => String(s||'').replace(/\D/g,''); // normaliza WhatsApp
+  const digitsOnly = s => String(s||'').replace(/\D/g,'');
   const store = {
     get(k,def){ try{ return JSON.parse(localStorage.getItem(k)) ?? def }catch{ return def } },
     set(k,v){ localStorage.setItem(k, JSON.stringify(v)) },
     del(k){ localStorage.removeItem(k) }
-  }
+  };
 
   let user = store.get('cf_user', null);
   let token = store.get('cf_token', null);
@@ -571,33 +577,31 @@ async function bootFeesHours(){
   }
 
   // ===== Boot =====
-(async function init(){
-  menuSkeleton(); 
-  await loadMenu();
-  await loadComplements();
-  if(user) { applyUser(); fetchOrders(); }
-  renderCart();
-  updateAuthUI();
-  setupNotifications();
+  (async function init(){
+    menuSkeleton(); 
+    await loadMenu();
+    await loadComplements();
+    if(user) { applyUser(); fetchOrders(); }
+    renderCart();
+    updateAuthUI();
+    setupNotifications();
 
-  // Endereços + taxas/horários do backend
-  addrRenderList();
-  await bootFeesHours();
-  setInterval(bootFeesHours, 60000);
-})();
+    // Endereços + taxas/horários
+    addrRenderList();
+    await bootFeesHours();
+    setInterval(bootFeesHours, 60000);
+  })();
 
-
- async function loadMenu(){
-  const data = await api('getMenu');
-  menu = data.ok ? data.items : [];
-  renderCategories();
-  renderMenu();
-}
-async function loadComplements(){
-  const data = await api('getComplements');
-  complements = data.ok ? data.items : [];
-}
-
+  async function loadMenu(){
+    const data = await api('getMenu');
+    menu = data.ok ? data.items : [];
+    renderCategories();
+    renderMenu();
+  }
+  async function loadComplements(){
+    const data = await api('getComplements');
+    complements = data.ok ? data.items : [];
+  }
 
   function renderCategories(){
     const cats = ['Tudo', ...new Set(menu.map(i=> i.cat))];
@@ -744,7 +748,6 @@ async function loadComplements(){
     $('#pickupCheckin')?.classList.toggle('hidden', entrega!=='pickup');
 
     if(entrega==='delivery'){
-      // Prefere endereço padrão salvo
       const items = addrLoad();
       const def = items.find(x=>x.default) || items[0];
       if(def){ addrFillForm(def); }
@@ -787,7 +790,6 @@ async function loadComplements(){
       const required = [['f-cep','CEP'],['f-cidade','Cidade'],['f-bairro','Bairro'],['f-rua','Rua/Avenida'],['f-num','Número']];
       for(const [id,label] of required){ if(!$('#'+id).value.trim()) return alert('Preencha: '+label); }
       endereco = { cep:$('#f-cep').value, cidade:$('#f-cidade').value, bairro:$('#f-bairro').value, rua:$('#f-rua').value, num:$('#f-num').value, comp:$('#f-comp').value };
-      // salva/atualiza último endereço rápido (opcional)
       const items = addrLoad();
       if(items.length===0) { items.push({...endereco, default:true}); addrSaveLocal(items); addrRenderList(); }
     }
@@ -1091,11 +1093,10 @@ async function loadComplements(){
   }
   function addrDelete(ix){
     const items=addrLoad(); items.splice(ix,1); addrSaveLocal(items); addrRenderList();
-  // 🔴 Seu backend não tem deleteAddress
-  // aqui só apaga localmente mesmo
+    // backend não tem deleteAddress — apenas remove localmente
   }
 
-  // ====== TAXA POR BAIRRO ======
+  // ====== TAXA POR BAIRRO & HORÁRIOS (BOOT) ======
   function calcTax(bairro){
     if(!bairro) return null;
     const key = Object.keys(BAIRROS_TAXAS).find(k => k.toLowerCase() === String(bairro).toLowerCase());
@@ -1106,65 +1107,30 @@ async function loadComplements(){
     const bairro = $('#f-bairro')?.value || '';
     const t = calcTax(bairro);
     if(el) el.textContent = t==null ? '—' : BRL(t);
-    // atualiza totais
     renderCart();
     renderCheckout();
   }
-
-
-  // ===== NAVEGAÇÃO AUX =====
-  function showPage(id){ pages.forEach(p=> $('#page-'+p)?.classList.toggle('hidden', p!==id)); window.scrollTo(0,0); }
-  function closePerfil(){ setActiveTab('menu'); showPage('menu'); }
-
-  // ===== MAPA & ROTA =====
-  let map, storeMarker, userMarker, routing, mapReady=false;
-  function openMapDialog(){
-    const dlg = $('#dlgMap');
-    dlg.showModal();
-    setTimeout(()=>{ 
-      if(!mapReady){
-        map = L.map('map', {zoomControl:false}).setView([STORE_LAT, STORE_LNG], 16);
-        L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {maxZoom: 19, attribution: '&copy; OpenStreetMap'}).addTo(map);
-        storeMarker = L.marker([STORE_LAT, STORE_LNG]).addTo(map).bindPopup('Clena Foods — Rua Pernambuco, 629');
-        mapReady=true;
-      } else {
-        map.invalidateSize();
-        map.setView([STORE_LAT, STORE_LNG], 16);
+  async function bootFeesHours(){
+    try {
+      // TAXAS: busca do backend
+      const fees = await api('getFees');
+      if (fees.ok){
+        BAIRROS_TAXAS = Object.fromEntries(fees.items.map(f => [f.bairro, Number(f.taxa||0)]));
+        const dl = document.getElementById('bairrosList');
+        if (dl) dl.innerHTML = Object.keys(BAIRROS_TAXAS).map(b => `<option value="${b}">`).join('');
       }
-      $('#mapStatus').textContent = '📍 Loja fixa — Rua Pernambuco, 629';
-    }, 50);
+      // HORÁRIO: local (sem planilha)
+      const open = getOpenStatusLocal();
+      const badge = document.getElementById('openBadge');
+      badge.innerHTML = open.open ? `🟢 Aberto • ${open.message}` : `🔴 Fechado • ${open.message}`;
+      badge.style.color = open.open ? 'var(--ok)' : 'var(--bad)';
+    } catch(e){
+      console.error('bootFeesHours', e);
+      const badge = document.getElementById('openBadge');
+      badge.innerHTML = '⚠️ Erro ao carregar informações';
+      badge.style.color = 'var(--warn)';
+    }
   }
-  $('#btnUseLoc').onclick = ()=>{
-    if(!navigator.geolocation){ $('#mapStatus').textContent = 'ℹ️ Geolocalização indisponível'; return }
-    const btn = $('#btnUseLoc'); setBtnBusy(btn,true,'Localizando…');
-    $('#mapStatus').textContent = '⏳ Solicitando sua localização…';
-    navigator.geolocation.getCurrentPosition((pos)=>{
-      const {latitude, longitude} = pos.coords;
-      if(userMarker) userMarker.remove();
-      userMarker = L.marker([latitude, longitude]).addTo(map).bindPopup('Você');
-      map.setView([latitude, longitude], 14);
-      $('#mapStatus').textContent = '✅ Localização ativa • Rota traçada';
-      if(routing){ routing.remove(); }
-      routing = L.Routing.control({
-        waypoints: [ L.latLng(latitude, longitude), L.latLng(STORE_LAT, STORE_LNG) ],
-        fitSelectedRoutes: true,
-        addWaypoints: false,
-        collapsible: true,
-        show: false,
-        routeWhileDragging: false
-      }).addTo(map);
-      setBtnBusy(btn,false,'Ver rota');
-    }, ()=>{
-      $('#mapStatus').textContent = '⚠️ Permissão negada';
-      setBtnBusy(btn,false,'Ver rota');
-    });
-  };
-  $('#btnClearRoute').onclick = ()=>{
-    if(routing){ routing.remove(); routing=null; }
-    if(userMarker){ userMarker.remove(); userMarker=null; }
-    map.setView([STORE_LAT, STORE_LNG], 16);
-    $('#mapStatus').textContent = '📍 Loja fixa • Rota removida';
-  };
 
   // ===== CHECK-IN RETIRADA =====
   function haversineKM(lat1,lon1,lat2,lon2){
