--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
           <i class="fa-solid fa-magnifying-glass" style="color:#94a3b8"></i>
           <input id="search" placeholder="Buscar por nome, descrição ou ingrediente…" />
         </div>
-        <span class="pill" id="deliveryArea"><i class="fa-solid fa-motorcycle"></i>&nbsp; Entrega: Barreiras-BA</span>
+        <span class="pill" id="deliveryArea"><i class="fa-solid fa-motorcycle"></i>&nbsp; Barreiras-BA</span>
         <span class="pill" id="openBadge"><i class="fa-solid fa-clock"></i>&nbsp; Verificando horário…</span>
       </div>
 
